# spent-this-much

./: .gitignore  .prettierignore  .tool-versions  Dockerfile  README.md  app.py  next.config.js  package.json  pyproject.toml  requirements.txt
api/: index.py
app/: SessionProvider.tsx  firebase.ts  globals.css  layout.tsx  page.tsx
app/api/auth/[...nextauth]/: route.ts
app/api/expenses/: route.ts
app/components/: ExpenseForm.tsx  Icons.tsx  SavedStatus.tsx  Spinner.tsx
app/signin/: page.tsx
