[tool.poetry]
name = "spent-this-much"
version = "0.1.0"
description = "Spent this much expense tracker backend"
authors = ["Jamie Connelly <jamiebruceconnelly@gmail.com>"]

[tool.poetry.dependencies]
python = ">3.10,<3.11"
fastapi = "0.100.1"
uvicorn = { version = "0.23.2", extras = ["standard"] }
